--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,7 @@ h3 {
 
 .App:before {
   content: '';
-  background: url('./sunset_weather_app.jpg') no-repeat center center/cover;
+  background: url('./assets/sunset_weather_app.jpg') no-repeat center center/cover;
   position: absolute;
   width: 100%;
   height: 100%;
